--- a/style.css
+++ b/style.css
@@ -4,30 +4,78 @@
     padding: 0;
 }
 
-html,
-body {
-    width: 100%;
+html {
+    width: 100vw;
     height: 100%;
 }
 
+body {
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+}
+
+html, body {
+    background: #030011;
+}
+
 .header {
+    width: 100%;
     background-color: rgb(50, 167, 145);
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom:20px;
+    padding: 0 20px;
+    box-shadow: 0 5px 5px rgba(50, 167, 145, 0.25);
+}
+
+.header #trybewarts-header-title {
+    font-size:1.2rem;
+    text-transform: uppercase;
+    color:white;
+}
+
+.header .trybewarts-header-logo {
+    width: 80px;
 }
 
 .header .trybewarts-login {
     display: flex;
 }
 
+.header .trybewarts-login input {
+    border: 0;
+    border-radius:5px;
+    margin: 0 2px;
+}
+
 .main {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #evaluation-form {
     display:flex;
     width: 675px;
     flex-direction: column;
+    border-right:2px solid rgba(220, 220, 220, 0.5);
+    background: url('/images/hogwarts.jpg');
+    background-size: cover;
+    padding: 50px;
+    border-radius: 25px;
+}
+
+#evaluation-form input, #evaluation-form select {
+    border: 0.5px solid rgb(120, 120, 120);
+    border-radius:5px;
+    margin: 5px;
+    /* box-shadow: 2px 0 5px grey; */
+}
+
+#evaluation-form input:placeholder-shown {
+    padding: 5px;
 }
 
 #trybewarts-forms-logo {
