--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ html {
 
 body {
     width: 100%;
-    display:flex;
+    display: flex;
     flex-direction: column;
 }
 
-html, body {
+html,
+body {
     background: #030011;
 }
 
@@ -25,15 +26,15 @@ html, body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom:20px;
+    margin-bottom: 20px;
     padding: 0 20px;
     box-shadow: 0 5px 5px rgba(50, 167, 145, 0.25);
 }
 
 .header #trybewarts-header-title {
-    font-size:1.2rem;
+    font-size: 1.2rem;
     text-transform: uppercase;
-    color:white;
+    color: white;
 }
 
 .header .trybewarts-header-logo {
@@ -46,7 +47,7 @@ html, body {
 
 .header .trybewarts-login input {
     border: 0;
-    border-radius:5px;
+    border-radius: 5px;
     margin: 0 2px;
 }
 
@@ -57,21 +58,48 @@ html, body {
 }
 
 #evaluation-form {
-    display:flex;
+    display: flex;
     width: 675px;
     flex-direction: column;
-    border-right:2px solid rgba(220, 220, 220, 0.5);
-    background: url('/images/hogwarts.jpg');
+    border-right: 2px solid rgba(220, 220, 220, 0.5);
+    background: url("/images/hogwarts.jpg");
     background-size: cover;
     padding: 50px;
     border-radius: 25px;
 }
 
-#evaluation-form input, #evaluation-form select {
+#evaluation-form div input {
     border: 0.5px solid rgb(120, 120, 120);
-    border-radius:5px;
+    border-radius: 5px;
     margin: 5px;
-    /* box-shadow: 2px 0 5px grey; */
+}
+
+#house {
+    width: 100%;
+}
+
+#evaluation-form div {
+    display: flex;
+}
+
+#container-family-studies {
+    display:flex;
+    background: white;
+}
+
+#family {
+    display: flex;
+    flex-direction: column;
+}
+
+#evaluation-form #studies {
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr)
+}
+
+#label-content {
+    grid-column: span 3;
 }
 
 #evaluation-form input:placeholder-shown {
