--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  --background-color: rgb(123, 0, 17);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,14 +11,14 @@
 html {
   width: 100vw;
   height: 100%;
-  background: rgb(3, 0, 17);
+  background: var(--background-color);
 }
 
 body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  background: rgb(3, 0, 17);
+  background: var(--background-color);
 }
 
 .header {
@@ -60,9 +64,9 @@ body {
   flex-direction: column;
   border-right: 2px solid rgba(220, 220, 220, 0.5);
   background: url('/images/hogwarts.jpg');
-  background-size: cover;
   padding: 50px;
   border-radius: 25px;
+  animation: animateImage 35s ease 0s infinite alternate forwards;
 }
 
 #evaluation-form div input {
@@ -77,22 +81,24 @@ body {
 
 #evaluation-form div {
   display: flex;
+  background: rgba(225, 225, 225, 0.5);
 }
 
 #container-family-studies {
   display: flex;
-  background: white;
 }
 
-#family {
+#evaluation-form #family {
   display: flex;
   flex-direction: column;
+  background: none;
 }
 
 #evaluation-form #studies {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  background: none;
 }
 
 #label-content {
@@ -105,4 +111,15 @@ body {
 
 #trybewarts-forms-logo {
   height: 500px;
+}
+
+@keyframes animateImage {
+
+  0% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
