--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  background: var(--background-color);
 }
 
 .header {
@@ -56,17 +55,19 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background: url('/images/hogwarts.jpg');
+  background-size: 120% 120%;
+  animation: animateImage 35s ease 0s infinite alternate forwards;
 }
 
 #evaluation-form {
   display: flex;
   width: 675px;
   flex-direction: column;
-  border-right: 2px solid rgba(220, 220, 220, 0.5);
-  background: url('/images/hogwarts.jpg');
-  padding: 50px;
+  box-shadow: 0 10px 5px rgba(0, 0, 0, 0.25);
+  padding: 15px;
   border-radius: 25px;
-  animation: animateImage 35s ease 0s infinite alternate forwards;
+  background: rgba(225, 225, 225, 0.5);
 }
 
 #evaluation-form div input {
@@ -75,13 +76,20 @@ body {
   margin: 5px;
 }
 
+#evaluation-form #input-name , #evaluation-form #input-lastname {
+  width: 100%;
+}
+
+#evaluation-form #input-email {
+  width: 100%;
+}
+
 #house {
   width: 100%;
 }
 
 #evaluation-form div {
   display: flex;
-  background: rgba(225, 225, 225, 0.5);
 }
 
 #container-family-studies {
@@ -111,6 +119,11 @@ body {
 
 #trybewarts-forms-logo {
   height: 500px;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
 }
 
 @keyframes animateImage {
