--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ body {
   color: white;
 }
 
+.animation-text {
+  font-size: 1.2rem;
+  text-transform: none;
+  transition: all 4s ease;
+  border-bottom: 2px solid black;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.05);
+}
+
 .header .trybewarts-header-logo {
   width: 80px;
 }
@@ -48,7 +56,7 @@ body {
   margin: 25px;
 }
 
-.header .trybewarts-login input, .header .trybewarts-login button {
+.header .trybewarts-login input , .header .trybewarts-login button {
   border: 0;
   border-radius: 5px;
   margin: 5px 2px;
@@ -59,23 +67,40 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background: url('/images/hogwarts.jpg');
+  background: url('/images/castle-hogwarts.png');
   background-size: 150% 50%;
   background-repeat: no-repeat;
+  transition: background 5s ease;
   animation: animateImage 35s ease 0s infinite alternate forwards;
 }
 
+/* LINK: https://odamoura.com/2017/03/31/wallpaper-3-minha-casa-em-hogwarts/ */
 #evaluation-form {
   display: flex;
   width: 100%;
+  height: 98%;
+  margin-top: 5px;
+  margin-bottom: 5px;
   flex-direction: column;
   box-shadow: 0 10px 5px rgba(0, 0, 0, 0.25);
   padding: 15px;
   border-radius: 25px;
   background: rgba(225, 225, 225, 0.5);
+  transition: height 2s ease;
 }
 
-#evaluation-form div input, #evaluation-form div textarea, #evaluation-form div select {
+.transform-form {
+  transition: all 2s ease;
+  box-shadow: 0 2px 10px rgba(120, 120, 120, 1);
+  padding-left: 15px;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  border: 5px double rgba(0, 0, 0, 0.25);
+}
+
+#evaluation-form div input , #evaluation-form div textarea , #evaluation-form div select {
   border: 0.5px solid rgb(120, 120, 120);
   border-radius: 5px;
   margin: 5px;
@@ -90,12 +115,19 @@ body {
   width: 100%;
 }
 
+.newForm {
+  background: rgb(223, 223, 223);
+  padding: 2px;
+  margin: 5px 0;
+  transition: all 5s ease;
+}
+
 .house-label {
   display: flex;
   justify-content: center;
   align-items: center;
   color: black;
-  height:25px;
+  height: 25px;
 }
 
 #house {
@@ -112,7 +144,7 @@ body {
 }
 
 #evaluation-form .ratio {
-  display:flex;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 }
@@ -140,7 +172,7 @@ body {
 
 #evaluation-form .container-textarea {
   flex-direction: column;
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -167,7 +199,7 @@ body {
 }
 
 #evaluation-form input:placeholder-shown {
-  text-align:center;
+  text-align: center;
 }
 
 #evaluation-form #submit-btn {
@@ -179,29 +211,29 @@ body {
   border: 0;
   background-color: rgb(117, 117, 117);
   border-radius: 25px;
-  transition: background-color .5s, color 1s, box-shadow 2s; 
+  transition: background-color 0.5s, color 1s, box-shadow 2s;
 }
 
 #evaluation-form #submit-btn:disabled {
-  background-color:rgba(39, 39, 39, 0.25);
-  color:rgba(0, 117, 105, 0.25);
+  background-color: rgba(39, 39, 39, 0.25);
+  color: rgba(0, 117, 105, 0.25);
   box-shadow: 0;
 }
 
 #trybewarts-forms-logo {
   width: 100%;
   height: 200px;
-  filter: drop-shadow(2px 2px 5px rgba(20, 20, 20, 0.5) )
+  filter: drop-shadow(2px 2px 5px rgba(20, 20, 20, 0.5) );
 }
 
 footer {
   width: 100%;
-  height:100%;
+  height: 100%;
   text-align: center;
-  padding:5px;
+  padding: 5px;
   background-color: rgb(20, 20, 20);
   color: white;
-  border-top:rgb(50, 167, 145) 5px double;
+  border-top: rgb(50, 167, 145) 5px double;
 }
 
 @keyframes animateImage {
@@ -215,7 +247,8 @@ footer {
   }
 }
 
-@media screen and (min-width: 820px){
+@media screen and ( min-width : 820px ) {
+
   .header {
     flex-direction: row;
   }
@@ -229,7 +262,7 @@ footer {
     padding: 10px;
     background: rgb(50, 167, 145);
     border: 2px rgb(120, 120, 120) solid;
-    color:white;
+    color: white;
   }
 
   .header .trybewarts-login input {
@@ -239,25 +272,21 @@ footer {
   .header .trybewarts-login input:placeholder-shown {
     text-align: center;
   }
-  
+
   .main {
     flex-direction: row;
     background-size: 120% 120%;
   }
 
   #evaluation-form {
-    display: flex;
     width: 675px;
     flex-direction: column;
-    box-shadow: 0 10px 5px rgba(0, 0, 0, 0.25);
-    padding: 0 15px;
-    border-radius: 25px;
-    background: rgba(225, 225, 225, 0.5);
-    transition: background 2s ease;
+    padding: 0;
+    transition: 2s ease all;
   }
 
   #trybewarts-forms-logo {
-    width:initial;
+    width: initial;
     height: 500px;
   }
 }
